# PM_1_course_labs

./: README.md
7 lab, cmake/: CMakeLists.txt  functions.cpp  input.txt  лаба 7, симейк.cpp  лаба 7, симейк.h
9lab_class/: Lab9_class.cpp
lab10_practicum_class/: lab_10_practicum_class.cpp
lab8_memory/: lab8_memory.cpp
prac_2_long_arif/: ConsoleApplication1.cpp
prac_3_text/: input.txt  output.txt  prac_3_text.cpp
prac_4_byte_packing/: prac_4_byte_packing.cpp  task_4_packing.cpp
prac_5_smart_massiv/: prac_5_smart_massiv.cpp
prac_6_vec/: prac_6_vector.cpp
